# crewai-app

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
src/descope_agentic_crew/: api.py  crew.py
src/descope_agentic_crew/config/: agents.yaml  tasks.yaml
src/descope_agentic_crew/tools/: custom_tool.py
